policies/disallow-run-as-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-run-as-root-user
spec:
  validationFailureAction: Audit
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Running as root is not allowed"
        pattern:
          spec:
            containers:
            - securityContext:
                runAsNonRoot: "true"
